--- a/.pylintrc
+++ b/.pylintrc
@@ -9,4 +9,4 @@
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=method-hidden,missing-function-docstring,missing-module-docstring,missing-class-docstring,fixme,no-else-return,invalid-name
+disable=method-hidden,missing-function-docstring,missing-module-docstring,missing-class-docstring,fixme,no-else-return,invalid-name,global-statement
